# defenderui

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_PLAN_KASPERSKY_UI.md  App.xaml  App.xaml.cs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  DefenderUI.csproj  InstallDeps.ps1  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  README.md  SECURITY.md  SINGLE_FILE_PUBLISH.md  THEME_AUDIT.md  app.manifest  installer.nsi
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/screenshots/: README.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  markdown-lint.yml  release.yml
Controls/: ActivityListItem.xaml  ActivityListItem.xaml.cs  FeatureTileCard.xaml  FeatureTileCard.xaml.cs  ProgressRingCard.xaml  ProgressRingCard.xaml.cs  ProtectionModuleCard.xaml  ProtectionModuleCard.xaml.cs  ScanModeCard.xaml  ScanModeCard.xaml.cs  SettingsRow.xaml  SettingsRow.xaml.cs  StatCard.xaml  StatCard.xaml.cs  StatusHeroCard.xaml  StatusHeroCard.xaml.cs  StatusPill.xaml  StatusPill.xaml.cs  ToastHost.xaml  ToastHost.xaml.cs
Helpers/: AnimationHelper.cs  BoolToVisibilityConverter.cs  ButtonEffects.cs  CardHoverEffect.cs  MotionPreferences.cs  RippleEffect.cs  ThemeBrushBinding.cs  ThemeHelper.cs
Models/: ActivityLogItem.cs  DailyThreatData.cs  FeatureTileData.cs  ProtectionModule.cs  ProtectionStatus.cs  ScanModeOption.cs  ScanResult.cs  SystemHealthInfo.cs  ThreatInfo.cs  ThreatResult.cs  UpdateHistoryItem.cs  UpdateInfo.cs
Properties/: launchSettings.json
Properties/PublishProfiles/: win-arm64.pubxml  win-x64.pubxml  win-x86.pubxml
Services/: INavigationService.cs  IScanService.cs  IThemeService.cs  IToastService.cs  MockDataService.cs  NavigationService.cs  ScanService.cs  ThemeService.cs  ThreatManager.cs  ToastService.cs
Services/Engines/: HeuristicScanner.cs  HydraDragonScanner.cs  SignatureScanner.cs
Styles/: Animations.xaml  ButtonStyles.xaml  CardStyles.xaml  Colors.xaml  CornerRadius.xaml  Elevation.xaml  Spacing.xaml  Typography.xaml
ViewModels/: DashboardViewModel.cs  FirewallViewModel.cs  PasswordManagerViewModel.cs  PrivacyViewModel.cs  ProtectionViewModel.cs  QuarantineViewModel.cs  ReportsViewModel.cs  ScanViewModel.cs  SettingsViewModel.cs  ToolsViewModel.cs  UpdateViewModel.cs  VpnViewModel.cs
Views/: DashboardPage.xaml  DashboardPage.xaml.cs  FirewallPage.xaml  FirewallPage.xaml.cs  PasswordManagerPage.xaml  PasswordManagerPage.xaml.cs  PrivacyPage.xaml  PrivacyPage.xaml.cs  ProtectionPage.xaml  ProtectionPage.xaml.cs  QuarantinePage.xaml  QuarantinePage.xaml.cs  ReportsPage.xaml  ReportsPage.xaml.cs  ScanPage.xaml  ScanPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  ToolsPage.xaml  ToolsPage.xaml.cs  UpdatePage.xaml  UpdatePage.xaml.cs  VpnPage.xaml  VpnPage.xaml.cs
dragon/hydradragonav/: Cargo.toml  build.rs  settings.toml
dragon/hydradragonav/src/: bloom_filter.rs  boot_scanner.rs  disinfector.rs  file_pum_scanner.rs  fix_registry.rs  hash_scanner.rs  lib.rs  main.rs  memory_scanner.rs  metrics.rs  pipeline.rs  quarantine.rs  registry_scanner.rs  remediation.rs  restart_disinfect.rs  scanner.rs  settings.rs  startup_scanner.rs  takeown.rs  types.rs  verdict.rs
dragon/hydradragonav/src/ml/: features.rs  inference.rs  js_features.rs  mod.rs  model.rs  pe_features.rs
dragon/hydradragonclamav/: Cargo.toml  README.md
dragon/hydradragonclamav/src/: bytecode.rs  bytecode_vm.rs  cert.rs  database.rs  filtering.rs  fuzzy.rs  icon.rs  icon_match.rs  lib.rs  logical.rs  main.rs  pattern.rs  pe.rs  phishing.rs  prefilter.rs  presence.rs  scanner.rs  version_info.rs
dragon/hydradragonclamav/src/phishing/: tld.rs
dragon/hydradragonclamav/tests/: differential_match.rs  feasibility_fuzz.rs
dragon/hydradragonextractor/: Cargo.toml
dragon/hydradragonextractor/src/: lib.rs
dragon/hydradragonsig/: Cargo.toml
dragon/hydradragonsig/examples/: INCLUDE_FEATURE_README.md  README.md  god_mode_iddqd_yamdle.yaml  main_rules_with_includes.yaml  malicious_vendors.yaml  open_rules.yaml  private_rules.yaml  pua_vendors.yaml  signature_rules.yaml  windows_registry_sabotage_yamdle.yaml
dragon/hydradragonsig/examples/hydradragonsig_rules/: file_pum_rules.yaml  heuristic_rules.yaml  malicious_vendors.yaml  pua_vendors.yaml  pum_registry_rules.yaml  ransomware_rules.yaml  registry_rules.yaml  reglist_pua.yaml  rules.yaml  scan_rules.yaml  trusted_signers.yaml
dragon/hydradragonsig/src/: lib.rs  main.rs  models.rs  signature_verification.rs  trusted_signers.rs
dragon/hydradragonsig/src/report/: mod.rs
dragon/hydradragonsig/src/rules/: engine.rs  file_pum_rules.yaml  file_rules.yaml  heuristic_rules.yaml  mod.rs  pum_registry_rules.yaml  pum_rules.yaml  ransomware_rules.yaml  reg_rules.yaml  reglist_pua.yaml  trusted_signers.yaml  types.rs
dragon/hydradragonsig/src/scanner/: env.rs  filetype.rs  mod.rs  pe.rs  registry.rs  strings.rs
dragon/hydradragonsig/src/utils/: entropy.rs  hash.rs  mod.rs  text.rs
dragon/hydradragonunicorn/: Cargo.toml
dragon/hydradragonunicorn/src/: error.rs  extract.rs  lib.rs
dragon/hydradragonunicorn/src/emulator/: mod.rs  unicorn_backend.rs
dragon/hydradragonunicorn/src/filetype/: mod.rs  pe_file.rs
dragon/hydradragonunicorn/src/fs/: enum_fs.rs  file_fs.rs  memory_fs.rs  mod.rs
dragon/hydradragonunicorn/src/module/: mod.rs
dragon/hydradragonunicorn/src/sality/: mod.rs
dragon/hydradragonunicorn/src/scanner/: mod.rs  scan_service.rs
dragon/hydradragonunicorn/src/unpacker/: apicalls.rs  engine.rs  error.rs  imagedump.rs  kernel_structs.rs  mod.rs  packers.rs
dragon/vmpunpacker/: Cargo.toml
dragon/vmpunpacker/src/: lib.rs  main.rs
scripts/: generate-icons.ps1  publish-single.cmd
