[package]
name = "hydradragonextractor"
version = "0.1.0"
edition = "2024"
description = "Pure-Rust archive and compression extractor - zip, tar, gzip, xz, lzma, 7z, asar, nsis"
license = "GPL-2.0-or-later"

[dependencies]
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
lzma-rust2 = "0.16"
sevenz-rust2 = { version = "0.20", features = ["brotli", "deflate", "lz4", "zstd"] }
thiserror = "2"
# Electron .asar archives — read-only (no write/integrity features needed)
asar = { version = "0.3", default-features = false }
# NSIS (NullSoft) installer parsing/extraction — pure Rust
nsis = { git = "https://github.com/BinFlip/nsis-rs.git" }

[dev-dependencies]
# Enable the writer (default features) only for tests, to build sample archives.
asar = "0.3"
